# fastapi-sqlalchemy

./: Dockerfile  deploy.sh  docker-compose-local.yaml  pyproject.toml
app/: .env.template  main.py
app/alembic/versions/: 2025_09_08_1341-9da75d215e3a_add_auth_columns_to_users.py
app/api/api_v1/user/: crud.py  dependencies.py  schemas.py  views.py
app/auth/: auth_router.py  utils.py
app/core/: config.py
app/core/models/: __init__.py  base.py  db_helper.py
app/tests/: conftest.py
app/tests/test_for_users/: test_get_users.py
project/: logger_settings.py  main.py
project/alembic/: env.py
project/alembic/versions/: 2025_09_07_0849-7611f2057b39_initial.py
project/src/api/: __init__.py
project/src/api/api_v1/: __init__.py
project/src/api/api_v1/user/: crud.py  dependencies.py  schemas.py  views.py
project/src/auth/: auth_router.py  utils.py
project/src/core/: config.py
project/src/core/models/: __init__.py  base.py  db_helper.py  user.py
project/tests/: conftest.py  test_get_users.py
